--- a/refs/reference.bib
+++ b/refs/reference.bib
@@ -40,3 +40,10 @@
     note = {R package version 1.16},
     url = {https://github.com/rstudio/rmarkdown},
   }
+
+ @Manual{wc,
+    title = {wordcountaddin: Word counts and readability statistics in R markdown documents},
+    author = {Ben Marwick},
+    year = {2020},
+    note = {R package version 0.3.0.9000},
+  }
